# AA-SI_api

./: .gitignore  README.md  pyproject.toml
src/aa_si_api_server/: __init__.py  config.py  server.py
src/aa_si_api_server/routes/: main.py
